# daisyseed-vscode-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_thirdparty_dependencies.cmake  compiler_linker_options.cmake  program_commands.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
